--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/core": "^7.10.2",
     "@babel/preset-env": "^7.10.2",
     "babel-loader": "^8.1.0",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "svelte-loader": "^2.13.6",
     "terser-webpack-plugin": "^3.0.5",
@@ -35,7 +36,6 @@
   },
   "dependencies": {
     "express": "^4.17.1",
-    "svelte": "^3.23.2",
-    "sweet-scroll": "^4.0.0"
+    "svelte": "^3.23.2"
   }
 }
